WIP: add XVF shadow capture timing